--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,10 +3,41 @@
 <ul>
   <% @articles.each do |article| %>
     <li>
+    <a href="/articles/<%= article.id %>">
       <%= article.title %>
+    </a>
     </li>
     <li>
       <%= article.created_at %>
+    </li>
+    <li>
+           $<%= @money %>
+    </li>
+  <% end %>
+</ul>
+
+<ul>
+  <% @articles.each do |article| %>
+    <li>
+      <a href="<%= article_path(article) %>">
+        <%= article.title %>
+      </a>
+    </li>
+  <% end %>
+</ul>
+
+<ul>
+  <% @articles.each do |article| %>
+    <li>
+      <%= link_to article.title, article %>
+    </li>
+  <% end %>
+</ul>
+
+<ul>
+  <% @articles.each do |article| %>
+    <li>
+      <%= link_to article.title, article %>
     </li>
   <% end %>
 </ul>
